third_party/move/move-compiler-v2/tests/checking/typing/v1-signer/move_to_reference_to_resource.exp

Diagnostics:
error: invalid call of `move_to`: expected `M::R` but found `&M::R` for argument 2
  ┌─ tests/checking/typing/v1-signer/move_to_reference_to_resource.move:4:23
  │
4 │         move_to<R>(s, move r)
  │                       ^^^^^^

error: invalid call of `move_to`: expected `N::R<bool>` but found `&mut N::R<bool>` for argument 2
   ┌─ tests/checking/typing/v1-signer/move_to_reference_to_resource.move:14:29
   │
14 │         move_to<R<bool>>(s, move r)
   │                             ^^^^^^
